--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,17 +1,18 @@
 <html>
 
 <head>
-    <title>Login!</title>
+    <title>Login</title>
 </head>
 
 <body>
     <form action="" method="post">
-        <label for="username">Username: </label>
-        <input type="text" name="username" id="username">
+        <label for="username">Handle: </label>
+        <input type="text" name="username" id="username"></br>
         <label for="password">Password: </label>
-        <input type="password" name="password" id="password">
+        <input type="password" name="password" id="password"></br>
         <input type="submit" value="Login">
     </form>
+    <p>No account yet? <a href="/register">Register here</a></p>
 </body>
 
 </html>
