--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -12,9 +12,13 @@
 <body>
     <form action="" method="post">
         <label for="username">Handle: </label>
-        <input type="text" name="username" id="username"> </br>
+        <input type="text" name="username" id="username" minlength="{{ config.HANDLE_MIN_LENGTH }}"
+            maxlength="{{ config.NICKNAME_MIN_LENGTH }}"
+            placeholder="{{ config.HANDLE_MIN_LENGTH }} - {{ config.HANDLE_MAX_LENGTH }} characters"> </br>
         <label for="nickname">What do you want us to call you? </label>
-        <input type="text" name="nickname" id="nickname"></br>
+        <input type="text" name="nickname" id="nickname" minlength="{{ config.NICKNAME_MIN_LENGTH }}"
+            maxlength="{{ config.NICKNAME_MAX_LENGTH }}"
+            placeholder="{{ config.NICKNAME_MIN_LENGTH }} - {{ config.NICKNAME_MAX_LENGTH }} characters"></br>
         <label for="password">Password: </label>
         <input type="password" name="password" id="password"></br>
         <label for="password2">Re-type password: </label>
