--- a/src/templates/watch.html
+++ b/src/templates/watch.html
@@ -9,7 +9,8 @@
     <video src="/video/{{ video.video_id }}" controls=true></video>
     <h1>{{ video.title }}</h1>
     <p>{{ video.description }}</p>
-    <p>Uploaded: {{ video.upload_time }} by: {{ video.uploader.nickname }} (@{{ video.uploader.handle }})</p>
+    <p>Uploaded: {{ video.upload_time }} by: <a href="/user/{{ video.uploader.handle }}">{{ video.uploader.nickname }}
+            (@{{ video.uploader.handle }})</a></p>
     <img src="/image/{{ video.uploader.avatar_id }}" width=60>
 </body>
 
