--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -13,16 +13,16 @@
     <form action="" method="post">
         <label for="username">Handle: </label>
         <input type="text" name="username" id="username" minlength="{{ config.HANDLE_MIN_LENGTH }}"
-            maxlength="{{ config.HANDLE_MAX_LENGTH }}"
-            placeholder="{{ config.HANDLE_MIN_LENGTH }} - {{ config.HANDLE_MAX_LENGTH }} characters"> </br>
+            maxlength="{{ config.HANDLE_MAX_LENGTH }}" pattern="([A-z0-9])+"
+            placeholder=" {{ config.HANDLE_MIN_LENGTH }} - {{ config.HANDLE_MAX_LENGTH }} chaacters" required> </br>
         <label for="nickname">What do you want us to call you? </label>
         <input type="text" name="nickname" id="nickname" minlength="{{ config.NICKNAME_MIN_LENGTH }}"
             maxlength="{{ config.NICKNAME_MAX_LENGTH }}"
-            placeholder="{{ config.NICKNAME_MIN_LENGTH }} - {{ config.NICKNAME_MAX_LENGTH }} characters"></br>
+            placeholder="{{ config.NICKNAME_MIN_LENGTH }} - {{ config.NICKNAME_MAX_LENGTH }} characters" required></br>
         <label for="password">Password: </label>
-        <input type="password" name="password" id="password"></br>
+        <input type="password" name="password" id="password" required></br>
         <label for="password2">Re-type password: </label>
-        <input type="password" name="password2" id="password2"></br>
+        <input type="password" name="password2" id="password2" required></br>
         <input type="submit" value="Register">
     </form>
 </body>
