Add video scaling to make sure videos are always 480p or lower

--- a/src/templates/watch.html
+++ b/src/templates/watch.html
@@ -6,7 +6,7 @@
 
 <body>
     <p><a href="/">Back to homepage</a></p>
-    <video autoplay="true" src="/video/{{ video.video_id }}" controls=true></video>
+    <video autoplay="true" src="/video/{{ video.video_id }}" controls=true height="480"></video>
     <h1>{{ video.title }}</h1>
     <p>{{ video.description }}</p>
     <p>Views: {{ video.download_counter }}</p>
