--- a/src/templates/user.html
+++ b/src/templates/user.html
@@ -13,6 +13,20 @@
     <p>{{ user.bio }}</p>
     {% if me.user_id == user.user_id %}
     <a href="/user/edit">Edit user info</a>
+    {% else %}
+    {% if not me.check_subscription(user.user_id) %}
+    <p>Not subscribed</p>
+    <form action="/subscribe/{{ user.handle }}" method="post">
+        {% include 'csrf_token.html' %}
+        <input type="submit" value="Subscribe">
+    </form>
+    {% else %}
+    <p>Subscribed</p>
+    <form action="/unsubscribe/{{ user.handle }}" method="post">
+        {% include 'csrf_token.html' %}
+        <input type="submit" value="Unsubscribe">
+    </form>
+    {% endif %}
     {% endif %}
     </br></br>
     <hr>
