--- a/src/templates/error.html
+++ b/src/templates/error.html
@@ -2,12 +2,16 @@
 
 <head>
     <title>Error!</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/main.css') }}">
 </head>
 
 <body>
-    <h1>Uh oh!</h1>
-    <p>{{ error }}</p>
-    <a href="/">Back to front-page</a>
+    {% include 'header.html' %}
+    <div class="content">
+        <h1>Uh oh!</h1>
+        <p>{{ error }}</p>
+        <a href="/">Back to front-page</a>
+    </div>
 </body>
 
 </html>
