--- a/src/templates/upload.html
+++ b/src/templates/upload.html
@@ -2,24 +2,26 @@
 
 <head>
     <title>Upload video</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/main.css') }}">
 </head>
 
 <body>
-    <h1>Upload video</h1>
-    <form action="/upload" method="post" enctype="multipart/form-data">
-        {% include 'csrf_token.html' %}
-        <label for="title" minlength="{{ config.VIDEO_TITLE_MIN_LENGTH }}"
-            maxlength="{{ config.VIDEO_TITLE_MAX_LENGTH }}" required>Video title: </label>
-        <input type="text" name="title" id="title"
-            placeholder="{{ config.VIDEO_TITLE_MIN_LENGTH }} - {{ config.VIDEO_TITLE_MAX_LENGTH }} characters"></br>
-        <label for="description">description: </label>
-        <textarea name="description" id="description"></textarea></br>
-        <label for="video">Upload video: </label>
-        <input type="file" name="video" id="video" accept="video/mp4, video/webm" required></br>
-        <input type="submit" value="Upload">
-    </form>
-
-    <p><a href="/">Back to homepage</a></p>
+    {% include 'header.html' %}
+    <div class="content">
+        <h1>Upload video</h1>
+        <form action="/upload" method="post" enctype="multipart/form-data">
+            {% include 'csrf_token.html' %}
+            <label for="video">Video: </label>
+            <input type="file" name="video" id="video" accept="video/mp4, video/webm" required></br>
+            <label for="title" minlength="{{ config.VIDEO_TITLE_MIN_LENGTH }}"
+                maxlength="{{ config.VIDEO_TITLE_MAX_LENGTH }}" required>Video title: </label>
+            <input type="text" name="title" id="title"
+                placeholder="{{ config.VIDEO_TITLE_MIN_LENGTH }} - {{ config.VIDEO_TITLE_MAX_LENGTH }} characters"></br>
+            <label for="description">Description: </label>
+            <textarea name="description" id="description"></textarea></br>
+            <input type="submit" value="Upload" class="button">
+        </form>
+    </div>
 </body>
 
 </html>
