--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -145,38 +145,42 @@ img {
     max-height: 100%;
 }
 
-.uploader {
-    margin: 0.5rem;
-    height: 2rem;
+.user-tag {
+    font-size: 1rem;
+    width: fit-content;
 }
 
 .user {
     margin: 1rem;
 }
 
-.user .user-details .nickname {
-    font-size: 2rem;
-}
-
-.user-details {
-    display: grid;
-    grid-template-columns: 2rem auto;
-    height: 100%;
-}
-
 .user .user-details {
-    grid-template-columns: 5rem auto;
-    height: 5rem;
+    font-size: 2.5em;
 }
 
 .user > p {
     margin: 1em;
 }
 
-.user-details .nickname {
-    font-size: 0.8rem;
+.user-details {
+    display: grid;
+    grid-template-columns: 2em auto;
+    height: 100%;
+    height: 2em;
+    margin: 0.5em;
+}
+
+.user-details .name {
     margin: auto;
     margin-left: 0.5rem;
+}
+
+.user-details .name .nickname {
+    font-size: 0.8em;
+}
+
+.user-details .name .handle {
+    font-size: 0.6em;
 }
 
 .avatar {
